# Newtons-Method

./: .gitignore
c/: .clang-format  CMakeLists.txt  main.cpp
c/inc/: Autodiff.hpp  Network.cpp  Network.hpp  Newton.hpp  Optimizer.hpp  types.hpp
c/scripts/: compile.sh  configure.sh  format.sh  full.sh  run.sh
c/src/: Autodiff.cpp
c/src/network/: Optimizer.hpp  network.cpp  network.hpp  types.hpp
c/src/python/: adam_model.h5  hessian.py  main.py  network.py  newton_model.h5  results.csv  sgd_model.h5
latex/: paper.tex
latex/Draft/: Draft.tex  main.bib
python/: multi_variable.py  single_variable.py
